# sudoku_c

./: .gitignore  .venv  Makefile  README.md  main.py  make_env.ps1  make_env.sh  mypy.ini  pyproject.toml  ruff.toml  sample.ipynb  sample.py  setup.py  sudoku_c.pyi  test.ipynb  test.py
data/: easy.csv  evil_3.csv
py/: sample.ipynb  sample.py
src/: CMakeLists.txt  bitmap.c  bitmap.h  bruteforce.c  bruteforce_main.c  lib.c  main.c  matrix.c  matrix.h  sudoku.c  sudoku.h  sudoku_main.c  wrap_bruteforce.c  wrap_sudoku.c
src/sudoku_c/: CMakeLists.txt  __init__.py  bitmap.c  bitmap.h  bridge.cpp  lib.c  main.c  matrix.c  matrix.h  sudoku.c  sudoku.h  sudoku_c.pyi
tests/: test_solve.py
