[project]
name = "sudoku-c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "nptyping>=2.0.1",
    "numpy>=2.2.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
    "setuptools>=80.0.1",
    "types-setuptools>=80.0.0.20250429",
]
